# momentum-desk

./: .dockerignore  .env.example  .gitignore  Dockerfile  FEATURES.md  README.md  config.example.yaml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
deploy/: supervisord.conf
docs/: AUTOTRADE.md  EDGE_PLATFORM.md  IBKR.md
momentum_desk/: __init__.py  cli.py  config.py  dryrun.py  ib_proxy.py  journal.py  live.py  live_engine.py  live_feed.py  live_trader.py  live_transmit.py  models.py  paper.py  risk.py  scanner.py  server.py  sizing.py
momentum_desk/adapters/: __init__.py  base.py  mock.py  polygon.py
momentum_desk/backtest/: __init__.py  cli.py  data.py  engine.py  http.py  metrics.py  providers.py  review.py  sweep.py
momentum_desk/broker/: __init__.py  base.py  demo.py  ibkr.py  ibkr_cp.py  sim.py
momentum_desk/edge/: __init__.py  combo.py  combo_snapshot.json  combo_snapshot_5y.json  combos_optimize_snapshot.json  combos_snapshot.json  eval_cache.json  exit_snapshot.json  (+23 more)
scripts/: build_eval_cache.py  build_lab_gauntlets.py  build_lab_seed.py  calibrate.py  combo.py  combos_all.py  exit_lab.py  gauntlet.py  install_gateway.sh  lab_dryrun.py  live_paper.py  optimize.py  optimize_combos.py  realrun.py  rules_all.py  run_gateway.sh  screen_edge.py  simulate_year.py
tests/: test_auth.py  test_broker.py  test_cache.py  test_combo.py  test_core.py  test_dryrun.py  test_edge.py  test_exits.py  test_gauntlet.py  test_ibkr_cp.py  test_journal.py  test_lab_api.py  test_live.py  test_live_api.py  test_live_engine.py  test_live_feed.py  test_live_trader.py  test_live_transmit.py  test_metrics.py  test_optimize.py  test_paper.py  test_portfolio.py  test_premarket.py  test_result_contract.py  test_review.py  test_rules.py  test_sizing.py  test_store.py  test_strategy.py  test_sweep.py
web/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+27 files in other folders)
