[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum-desk"
version = "0.1.0"
description = "Fast low-float momentum scanner with a mechanical risk engine, paper-first, for IBKR"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
broker = ["ib-async"]          # IBKR connectivity (paper-first)

[tool.setuptools.packages.find]
include = ["momentum_desk*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# `l` is idiomatic for the low of an OHLC bar (o/h/l/c); allow it.
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
